# swiggy-top3-mlops

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
swiggy_top3_mlops/: __init__.py  dataset.py  features.py  plots.py
swiggy_top3_mlops/modeling/: predict.py  train.py
