[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "swiggy_top3_mlops"
version = "0.0.1"
description = "This project will to starting point of MLops, It is help to reccomend top3 items on swiggy home page"
authors = [
  { name = "Mohit" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["swiggy_top3_mlops"]
include = ["pyproject.toml", "swiggy_top3_mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["swiggy_top3_mlops"]
force-sort-within-sections = true

